--- a/styles/Combined.css
+++ b/styles/Combined.css
@@ -350,7 +350,7 @@ html body main p a:hover {
 
 html.contact {
   height: 100vh;
-  background-image: url("../images/backgrounds/ContactCake.jpg");
+  background-image: url("../../images/backgrounds/HomeCater.jpg");
   background-position: bottom center;
   background-size: cover;
   background-attachment: fixed;
