--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -4,7 +4,7 @@
 html.contact {
     height: 100vh;
     
-    background-image: url("../images/backgrounds/ContactCake.jpg");
+    background-image: url("../../images/backgrounds/HomeCater.jpg");
     background-position: bottom center;
     background-size: cover;
     background-attachment: fixed;
