--- a/styles/Combined.css
+++ b/styles/Combined.css
@@ -219,6 +219,8 @@ html body main {
   height: auto;
   padding: 50px;
   margin: 40px auto 0 auto;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   background: none;
   background-color: rgba(255, 255, 255, 0.44);
   border-radius: 10px 20% 10px 20%;
@@ -335,6 +337,8 @@ header #main-nav, #main-nav2, #main-nav3, #main-nav4 {
   flex-wrap: wrap;
   align-items: center;
   height: 105px;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
   /* background: linear-gradient(to top left, red, green 27%); */
   background: linear-gradient(to top left, rgba(255, 255, 255, calc(0.29 + var(--change-alpha))), rgba(255, 255, 255, calc(0.68 + var(--change-alpha))) 24%);
   border-radius: 0 0 10% 0;
@@ -465,6 +469,8 @@ html.index body footer {
   /* background: linear-gradient(green 33%, green 66%, yellow); */
   background: linear-gradient(rgba(255, 255, 255, calc(0.68 + var(--change-alpha))) 33%, rgba(255, 255, 255, calc(0.68 + var(--change-alpha))) 66%, rgba(255, 255, 255, calc(0.29 + var(--change-alpha))));
   border-radius: 0 0 90% 13%;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 @media only screen and (max-width: 1000px) {
   html.index body footer {
