--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -51,6 +51,7 @@ html.index {
             /* background: linear-gradient(green 33%, green 66%, yellow); */
             background: linear-gradient(vars.$white-main 33%, vars.$white-main 66%, vars.$white-blend2);
             border-radius: 0 0 90% 13%;
+            backdrop-filter: blur(5px);
             
             @media only screen and (max-width: vars.$max-width-phone) {
                 box-sizing: border-box;
