--- a/styles/Combined.css
+++ b/styles/Combined.css
@@ -235,6 +235,8 @@ html body main {
     background: none;
     background: linear-gradient(to bottom, rgba(255, 255, 255, calc(0.68 + var(--change-alpha))) 40%, rgba(255, 255, 255, 0));
     border-radius: 0;
+    -webkit-backdrop-filter: blur(0px);
+            backdrop-filter: blur(0px);
   }
 }
 html body main address div {
@@ -350,6 +352,8 @@ header #main-nav, #main-nav2, #main-nav3, #main-nav4 {
     background: none;
     background-color: rgba(255, 255, 255, calc(0.68 + var(--change-alpha)));
     border-radius: 0;
+    -webkit-backdrop-filter: blur(0px);
+            backdrop-filter: blur(0px);
   }
 }
 header #main-nav div, #main-nav2 div, #main-nav3 div, #main-nav4 div {
@@ -456,6 +460,8 @@ html.index body main {
     margin-top: 4px;
     background: none;
     background-color: rgba(255, 255, 255, calc(0.68 + var(--change-alpha)));
+    -webkit-backdrop-filter: blur(0px);
+            backdrop-filter: blur(0px);
   }
 }
 html.index body main p {
@@ -479,6 +485,8 @@ html.index body footer {
     padding: 9vw 5vw 200px 5vw;
     background: linear-gradient(to bottom, rgba(255, 255, 255, calc(0.68 + var(--change-alpha))) 5%, rgba(255, 255, 255, 0));
     border-radius: 0;
+    -webkit-backdrop-filter: blur(0px);
+            backdrop-filter: blur(0px);
   }
 }
 html.index body footer p {
