--- a/styles/partials/_vars.scss
+++ b/styles/partials/_vars.scss
@@ -6,6 +6,7 @@ $white-blend1: rgba(255, 255, 255, calc(0.29 + var(--change-alpha)));
 $white-blend2: rgba(255, 255, 255, calc(0.29 + var(--change-alpha)));
 $white-main-fixed: rgba(255, 255, 255, 0.44);
 $white-transparent: rgba(255, 255, 255, 0);
+$dark-main-fixed: rgb(66,69,73);
 $not-hover-color: rgba(0, 0, 0, 0.5);
 $border-color: rgba(0, 192, 147, 1);
 $border-color2: rgba(255, 166, 0, 0.471);
