--- a/styles/partials/_index.scss
+++ b/styles/partials/_index.scss
@@ -41,6 +41,7 @@ html.index {
             p {
                 text-align: left;
             }
+        }
         
         footer {
             width: vars.$main-width;
@@ -67,6 +68,7 @@ html.index {
             p {
                 margin-bottom: 0px;
             }
+        
 
             #background-image-author {
                 padding-left: 17px;
