--- a/styles/partials/_contact.scss
+++ b/styles/partials/_contact.scss
@@ -27,6 +27,10 @@ html.contact {
             }
         }
 
+        main{
+            background-color: vars.$white-main-fixed;
+        }
+
         p {
             font-style: normal;
         }
