--- a/styles/partials/_main.scss
+++ b/styles/partials/_main.scss
@@ -1,32 +1,40 @@
 @use "./vars";
+//In here a general rules used for the main of html pages. Note these are only applied if no specific styling is applied to the page and or element.
 
+//Normal background rules.
+html body{
+    background-position: bottom center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+//Normal main rules.
 html body main {
     width: 400px;
     height: auto;
     padding: 50px;
     margin: 40px auto 0 auto;
     background: none;
-    background-color: vars.$white-main-fixed;
     border-radius: 10px 20% 10px 20%;
 
+    //Shared blur effect for the index and the contact pages.
     &.blurred-mains{
         backdrop-filter: blur(5px);
-
+        
+        //removes the blur effect for mobile viewing.
         @media only screen and (max-width: vars.$max-width-phone) {
             backdrop-filter: blur(0px);
                     
         }
 
     }
-
-
+    //Normal rules for mobile view.
     @media only screen and (max-width: vars.$max-width-phone) {
         align-items: normal;
         width: 100vw;
         height: auto;
         padding: 100px 0 300px 0;
         margin-top: 4px;
-
         background: none;
         // background: linear-gradient(to bottom, red 40%, yellow);
         background: linear-gradient(to bottom, vars.$white-main 40%, vars.$white-transparent);
@@ -35,6 +43,7 @@ html body main {
                 
     }
     
+    //Styling for all the contact links.
     address {    
         div {
             display: block;
