--- a/styles/partials/_add-recipe.scss
+++ b/styles/partials/_add-recipe.scss
@@ -3,7 +3,7 @@
 @use "./form";
 
 html.collections-add-recipe {
-    background-image: url("../../images/backgrounds/ChristmasBackground2.jpg");
+    background-image: url("../images/backgrounds/ChristmasBackground2.jpg");
     background-position: bottom center;
     background-size: cover;
     background-attachment: fixed;
