--- a/styles/partials/_collections.scss
+++ b/styles/partials/_collections.scss
@@ -6,7 +6,7 @@ html.collections {
     background-position: bottom center;
     background-size: cover;
     background-attachment: fixed;
-    background-image: url("../../images/backgrounds/ChristmasBackground.jpg");
+    background-image: url("../images/backgrounds/ChristmasBackground.jpg");
     scroll-behavior: smooth;
     --change-alpha: -0.11;
     
