--- a/styles/Combined.css
+++ b/styles/Combined.css
@@ -61,10 +61,16 @@ form {
   flex-direction: column;
   width: 400px;
   margin: 0 auto 0 auto;
+  background-color: rgba(255, 255, 255, 0.44);
+  padding: 2rem;
+  border-radius: 10px;
 }
 @media only screen and (max-width: 1000px) {
   form {
     width: 100%;
+    background-color: none;
+    padding: 0;
+    border-radius: 5px;
   }
 }
 form section {
